[tool.poetry]
name = "quantms-utils"
description = "Python scripts and helpers for the quantMS workflow"
readme = "README.md"
license = "MIT"
version = "0.0.20"
authors = [
    "Yasset Perez-Riverol <ypriverol@gmail.com>",
    "Dai Chengxin <chengxin2024@126.com>",
    "Julianus Pfeuffer <jule.pf@gmail.com>"
]
keywords = [
    "quantms",
    "proteomics",
    "mass-spectrometry",
    "data-analysis",
    "big data"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable"
]
packages = [
    { include = "quantmsutils" }
]

[tool.poetry.dependencies]
python = "*"
click = "*"
sdrf-pipelines = ">=0.0.31"
pyopenms = ">=3.2.0"
pandas = "*"
pyarrow = ">=16.1.0"
scipy = "*"

[tool.poetry.urls]
GitHub = "https://github.com/bigbio/quantms-utils"
PyPi = "https://pypi.org/project/quantms-utils/"
Quantms = "https://quantms.org"
LICENSE = "https://github.com/bigbio/quantms-utils/blob/main/LICENSE"

[tool.poetry.scripts]
quantmsutilsc = "quantmsutils.quantmsutilsc:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"