[project]
name = "quantms-utils"
dynamic = ["version"]
description = "Python scripts and helpers for the quantMS workflow"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yasset Perez-Riverol", email = "ypriverol@gmail.com" },
    { name = "Dai Chengxin", email = "chengxin2024@126.com" },
    { name = "Julianus Pfeuffer", email = "jule.pf@gmail.com" }
]
keywords = [
    "quantms",
    "proteomics",
    "mass-spectrometry",
    "data-analysis",
    "big data",
    "sdrf",
    "sample-metadata",
    "proteomics-pipeline"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
    "click",
    "sdrf-pipelines>=0.1.2",
    "pyopenms>=3.3.0",
    "pandas",
    "pyarrow>=16.1.0",
    "scipy",
]

[project.urls]
Homepage = "https://quantms.org"
Documentation = "https://docs.quantms.org"
GitHub = "https://github.com/bigbio/quantms-utils"
"Bug Tracker" = "https://github.com/bigbio/quantms-utils/issues"
PyPI = "https://pypi.org/project/quantms-utils/"

[project.scripts]
quantmsutilsc = "quantmsutils.quantmsutilsc:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ["py39"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["quantmsutils"]
